<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:orientation="vertical"
	    android:paddingBottom="@dimen/pad_20dp"
	    android:paddingLeft="@dimen/pad_15dp"
	    android:paddingRight="@dimen/pad_15dp"
	    android:paddingTop="0dp" >
	    
	    <ImageView
            android:id="@+id/logo_congreso"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="0dp"
            android:layout_weight="0.10"
            android:src="@drawable/logo_congreso_320x119" />

	    <Button
	        android:id="@+id/btnQR"
	        android:layout_width="250dp"
	        android:layout_height="65dp"
	        android:background="@drawable/btn_cambio_pulsasion"
	        style="@style/btn_red_large"
	        android:text="@string/escanear" />
	    
	    <!-- ===========================LINEA SEPARADORA======================= -->
             <View
                 android:id="@+id/line1"     
			     android:layout_width="match_parent"
			     android:layout_height="1dp"
			     android:background="@android:color/darker_gray"
			     android:layout_marginTop="20dp"
			     android:layout_marginBottom="20dp" />
       <!-- ==================================================================== -->
	
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textStyle="bold"
	        android:textSize="18sp"
	        android:text="@string/documento" />
	
	    <TextView
	        android:id="@+id/txtNombrePersona"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="18sp"
	        android:textStyle="bold"
	        android:text="@string/nombreCompleto" />
	    
	    <!-- ===========================LINEA SEPARADORA======================= -->
             <View
                 android:id="@+id/line2"     
			     android:layout_width="match_parent"
			     android:layout_height="1dp"
			     android:background="@android:color/darker_gray"
			     android:layout_marginTop="20dp"
			     android:layout_marginBottom="20dp" />
       <!-- ==================================================================== -->
	
	    <Button
	        android:id="@+id/btnValidarRegistro"
	        android:background="@drawable/btn_cambio_pulsasion"
	        style="@style/btn_red_large"
	        android:layout_width="250dp"
	        android:layout_height="65dp"
	        android:layout_marginBottom="18dp"
	        android:text="@string/confimarAsistencia" />

	    <Button
	        android:id="@+id/btnDescontarAlmuerzo"
	        style="@style/btn_red_large"
	        android:layout_width="250dp"
	        android:layout_height="65dp"
	        android:background="@drawable/btn_cambio_pulsasion"
	        android:text="@string/descontarAlmuerzo" />

	</LinearLayout>

</ScrollView>